# Reely

./: .gitignore  README.md  browseruse_get_latest_articles.py  groq_get_latest_articles.py  pyproject.toml  server.py
backend/: browseruse_get_latest_articles.py  crawler.py  groq_get_latest_articles.py  lib.py  prompts.yaml  pyproject.toml  server.py
backend/utils/: elevenlabs.py  scene_converter.py  video_processing.py
frontend/: .gitignore  README.md  drizzle.config.ts  middleware.ts  package.json  pnpm-lock.yaml
frontend/actions/: auth.ts  hello.ts  sources.ts  videos.ts
frontend/app/: globals.css  layout.tsx
frontend/components/: app-header.tsx  auth-form.tsx  hello-world-form.tsx  slide-content.tsx  slide-dots-indicator.tsx  source-form.tsx  source-list.tsx  video-player.tsx  watch-feed-button.css  watch-feed-button.tsx
frontend/db/: schema.ts
frontend/hooks/: use-intersection-observer.ts
frontend/lib/: action-result.ts  db.ts  slide-types.ts  video-utils.ts  videos.ts
frontend/types/: auth.ts  hello.ts  index.ts  sources.ts  (+1 more)
summaries/: https:--myanimelist.net-_2025-10-18_21:46:23.json  https:--www.cnbc.com-world-?region=world_2025-10-18_19:58:06.json  https:--www.csdn.net-_2025-10-18_19:34:41.json  https:--www.csdn.net-_2025-10-18_20:07:54.json  https_--36kr.com-_2025-10-18_19_29_25.json  https_--blog.samaltman.com-_2025-10-18_20_02_20.json  https_--news.ycombinator.com-_2025-10-18_20_05_16.json  https_--www.deeplearning.ai-_2025-10-18_20_11_56.json  https_--x.com-karpathy_2025-10-18_19_40_12.json  https_--x.com-supabase_2025-10-18_19_49_00.json
(+23 files in other folders)
